syntax = "proto3";

package games.tictactoe.proto.server;

import "games/tictactoe/proto/board_marker.proto";
import "games/tictactoe/proto/game_state.proto";

option go_package = "github.com/shaldengeki/monorepo/games/tictactoe/proto/server";

message ServerValidMove {
    uint32 as_of_turn = 1;
    uint32 move_token = 2;
}

message ServerInvalidMove {
    uint32 move_token = 1;
}

message ServerPong {}

message Move {
    uint32 turn = 1;
    BoardMarker marker = 2;
}

message ServerMoves {
    repeated Move moves = 1;
}

message ServerStateSnapshot {
    repeated BoardMarker markers = 1;
}

message ServerInitialState {
    int32 player = 1;
    ServerStateSnapshot snapshot = 2;
}

message ServerMessage {
    oneof payload {
        ServerInitialState initial_state = 1;
        ServerStateSnapshot snapshot = 2;
        ServerMoves moves = 3;
        ServerValidMove valid_move = 4;
        ServerInvalidMove invalid_move = 5;
        ServerPong pong = 6;
    }
}
